--- a/pages/p6/916336.md
+++ b/pages/p6/916336.md
@@ -1,4 +1,4 @@
-### 实现和平的“新龙马精神”(图)
+### 丢车保帅？这张照片泄露了周恩来内心诡秘(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/10-18/p2798672a256693846-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）" src="https://img2.secretchina.com/pic/2019/10-31/p2552801a305236912-ss.jpg" style="height:338px; width:600px"/>
   <br>
-   龙应台（图片来源：维基百科）
+   周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,57 +21,54 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月18日讯】美中局势恶化 ，台海紧张，中国空军战机频频扰台，前马英九政府文化部长龙应台在社交媒体表示：“不管你说什么，我
-  <span href="https://www.secretchina.com/news/gb/tag/反战" target="_blank">
-   反战
-  </span>
-  。”
+  1955年4月11日，
+  <strong>
+   万隆会议
+  </strong>
+  前夕，“
+  <strong>
+   克什米尔公主号
+  </strong>
+  ”飞机爆炸案曾震惊国际。随后真相不断披露，时任中共总理
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/周恩来" target="_blank">
+    周恩来
+   </span>
+  </strong>
+  预先已知道这起针对他的暗杀行动，但周为了自保和迷惑对手，临时改变路线却让其他人作了替死鬼。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  龙教授又质疑：“战争是可以把人民当筹码、豪赌一盘的吗？战争是可以当综艺茶余饭后随便聊聊的吗？”
+  网络曾曝光一张当时周恩来改变路线后于1955年4月16日上午抵达新加坡加冷机场的罕见照片，照片中周恩来诡异的眼神或泄露其当时的诡秘内心世界。从照片上看，周恩来和许多随行人员在一起，大家都目视前方，行色匆匆，唯有周恩来微仰着头，向天空张望，目光诡异。
  </p>
  <p>
-  龙前部长又以文艺青年的善良理性角度指出：20 世纪初的维也纳，曾经出现一段岁月静好的文艺浪漫日子。奥地利画家克林姆与法国雕塑家罗丹曾在维也纳喝下午茶，感受了“孩童似的幸福”，但几年后战争来了，千年累积的文明全毁。
- </p>
- <p>
-  不幸
-  <span href="https://www.secretchina.com/news/gb/tag/龙应台" target="_blank">
-   龙应台
+  此前4月11日，周恩来原计划乘坐的“
+  <span href="https://www.secretchina.com/news/gb/tag/克什米尔公主号" target="_blank">
+   克什米尔公主号
   </span>
-  的呼喊，被指为低级的文青煽情，台湾下一代网民不接受。台湾网民指斥：“谁不反战？大家都反战，想开战的是中共。”又说：“龙应台与马英九一样，就是要台湾要向中共求和。”
+  ”飞机爆炸，机上有11人无辜遇难，而预先知悉暗杀计划的周恩来则金蝉脱壳。
  </p>
  <p>
-  唯龙应台反战之关键，在于“不管你说什么”，这句话压下来，抹煞了一切战争的大前提。
+  <strong>
+   掌握情报“克什米尔公主号”有炸弹
+  </strong>
  </p>
  <p>
-  本来战争有“正义战争”和“不义战争”之分：纳粹极权侵略法国和波兰，是不义战争，罗斯福邱吉尔艾森豪威尔主导的诺曼第战役，是正义战争。若以龙教授“不管你说什么”，不知西方纪念第二次世界大战胜利七十五周年是为何？
+  综合多方报导，1955年4月18日至24日，第一次亚非会议在印度尼西亚的万隆举行。周恩来为中国代表团团长，并租用印度航空公司的“克什米尔公主号”客机，率团取道香港前往万隆。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  而龙教授做文化部长时，应下令拆毁台北的“忠烈祠”，其中供奉的全部是违反了“不管你说什么，我反战”而参加了战争的一群傻鬼，与东京的靖国神社相同。
+  4月3日，中共接到密报，国民党特务机关已获悉中共代表团行踪，可能采取行动。9日晚，进一步情报称，代表团所乘飞机将遭破坏，飞机上备有定时炸弹。周恩来立即要求通过外交渠道向英国政府交涉。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -86,7 +83,7 @@
   </div>
  </center>
  <p>
-  前总统蒋中正七七事变之后在庐山发表抗战声明，指出：“到了无可避免的最后关头，我们当然只有牺牲，只有抗战”、“如果战端一开，也就是地无分南北 ，年无分老幼，无论何人，皆有守土抗敌之责任，皆应抱定牺牲一切之决心”。龙应台的所谓“不管你说什么”，不知是否连八年抗战也一概否决，包括 1937 年蒋中正的此说？
+  10日上午，中共外交部紧急约见英国驻华代办处参赞艾惕恩，告知这一消息。新华社香港分社9日晚即将这一情况正式通知港英当局，还在11日两次约见印度航空公司驻香港分公司经理。该经理表示一定严加防范，不让任何外人接近飞机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,7 +98,7 @@
   </div>
  </center>
  <p>
-  当年蒋中正下令：“在此安危绝续之交，唯赖举国一致，服从纪律、严守秩序。”若时空逆错，龙应台若在 1937 年江西庐山蒋中正讲话会场，以知识分子的清醒头脑和独立人格，力排众议，向蒋委员长高喊：“对日战争，可以把人民当筹码吗？可以这样豪赌吗？”当场有何后果，将会十分有趣。
+  在当年四月十一日“克什米尔公主号”出事前八天，中共就掌握了“克什米尔公主号”客机将被炸毁的情报。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,7 +113,9 @@
   </div>
  </center>
  <p>
-  喊完之后，龙前部长若早生五十年，即可以加入副总裁汪精卫阵营。汪先生英雄所见略同，也预见战争有毁灭中华文化之风险，因中华民国的实力与日本不相称，即毅然出走，领导和平运动，将“不管你说什么，我反战”的龙氏道德高地号召，付诸实践。
+  <strong>
+   照常起飞中途爆炸坠海导致11人遇难
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,11 +130,7 @@
   </div>
  </center>
  <p>
-  事实证明，汪精卫和龙应台的看法也没有错。日中军事实力悬殊，日军由华北大举进攻，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
-  </span>
-  下令炸毁花园口黄河堤坝，河水大氾滥，死难人民八十万。
+  4月11日上午，“克什米尔公主号”准时到达北京，接载中共代表团和三名外国记者，当时人们并不知道周恩来不在飞机上。12时15分，“克什米尔公主号”抵达香港启德机场，休息加油后飞印尼的万隆。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -150,11 +145,24 @@
   </div>
  </center>
  <p>
-  张爱玲情人兼民国大才子胡兰成也以文化人的高度发表论述，严正指出：“现在
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  要是再抗战下去，只能卷入世界大战的漩涡，而卷入大战漩涡，又是无论胜败，都于中国无利。汪先生领导的和平动运动，也是要防止这种同归于尽的做法，替双方指出：除了这种同归于尽之外，还有共存共荣的大路，就是实现中日两国的和平。”
+  下午6时30分，机舱内突然发出爆炸声，随即多处起火。机长决定强行降落，并用无线电发出三次求救信号。雅加达机场得知周恩来不在机上，信号中断。伴随着一声巨大的爆炸声，飞机坠入大海，炸成几段。除三名机组人员奇迹生还，机上其余11人全部遇难。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   全身而退 周恩来“丢卒保车金蝉脱壳”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +181,7 @@
   </ins>
  </center>
  <p>
-  胡兰成先生与龙应台前部长一样的逻辑，虽然当时战争的是中日两国，今日是“各自表述”的台海两岸华人内战。
+  “克什米尔公主号”事件的目标直指周恩来，但周恩来却临时改变了路线，金蝉脱壳，从昆明取道仰光到达雅加达。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +196,7 @@
   </div>
  </center>
  <p>
-  不管你说什么，战争就是战争，汪精卫和龙应台的反战并无分别。
+  4月7日，周恩来和陈毅率代表团从北京乘伊尔——14飞机首先飞昆明。4月14日清晨7时15分，周恩来一行26人乘坐从印度航空公司租借的另一架专机“空中霸王号”自昆明起飞，前往仰光。当地时间上午10点30分，“空中霸王号”降落在仰光机场。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,7 +211,7 @@
   </div>
  </center>
  <p>
-  胡兰成的和平言论也一样充满道德感召力，与龙应台同样感人。分别在于人家汪氏敢迈出勇敢的一步，而马英九和龙应台至今为止只付出言论口水。
+  4月16日凌晨，周恩来一行由仰光飞往雅加达。“空中霸王号”飞行8个小时进入新加坡空域，正赶上航线前方有雷雨区。飞机无法飞越雷雨区，4月16日上午飞机降落新加坡加冷机场。4月16日晚6时，周恩来到达印度尼西亚首都雅加达。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -218,7 +226,9 @@
   </div>
  </center>
  <p>
-  所谓“战难，和亦不易”，就看龙部长和马前总统，何时双双站出来，宣布与一个“好战”的军国主义台湾政权决裂，成立“新国民党和平委员会”，访问北京，接受“一国两制”和平统一终极方案，此即无愧于汪胡两先贤于地下。
+  <strong>
+   声东击西 周恩来让别人枉做了替死鬼
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -233,7 +243,7 @@
   </div>
  </center>
  <p>
-  这才是挽救台湾之道。人家日本有西乡隆盛、坂本龙马名留青史，台湾若也有龙马力挽狂澜，一对民国精英，实现和平的“新龙马精神”，或也不让前殖民主之大和民族专美。
+  “克什米尔公主号”爆炸失事后，香港警方随即展开艰苦的调查，一无所获。后来还是根据中共提供的情报才破了案。中共明确告知事件是国民党保密局香港情报站策动，主谋赵斌成，指挥者金建夫，执行者是香港机场地勤人员周驹，使用的定时炸弹是从台湾基隆秘密运到香港。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -247,28 +257,8 @@
    </center>
   </div>
  </center>
- (文章仅代表作者个人立场和观点)
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  调查人员非常困惑不解：既然周恩来对这事了如指掌，为什么还要中共代表团其他成员按原计划飞行，去送死呢？原来周恩来为迷惑台湾香港情报站不再改变计划，确保自己的安全，让包括自己司机在内的11名中外菁英去送死。据周恩来后来说，这叫做“声东击西”、“丢车保帅”。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -281,6 +271,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:徐枫
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3qNc"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -298,13 +322,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/949587.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/949587.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/949587.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/18/949587.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/916336.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/949587.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/916336.md' width='0px' height='0px'/>
