--- a/pages/nf4514/n12624493.md
+++ b/pages/nf4514/n12624493.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12·16】帮川普翻盘 七议员响应" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/7-7.jpg"/>
+<div><img alt="【大选更新12·16】审查舞弊 国会听证在即" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-115-1.jpg"/>
 <div class="caption">
- 周二（12月15日），“制止窃选”（Stop The Steal）联盟在华盛顿国会山俱乐部举办新闻发布会。前排两位女士是密歇根州被拒绝进入议会大楼投票的两位选举人。（林乐予／大纪元）
+ 周三（12月16日）美国参议院国土安全和政府事务委员会将举行大选以来的首次国会听证会，以审查2020年总统大选中的“违规行为”。（李莎／大纪元）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -15,17 +15,14 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月16日讯】（大纪元记者徐简报导）周三（12月16日）美国参议院国土安全和政府事务委员会将举行11月3日大选以来的首次国会听证会，以审查2020年总统大选中的“违规行为”，这将是本次
+ 【大纪元2020年12月16日讯】（大纪元记者徐简报导）周三（12月16日）美国参议院国土安全和政府事务委员会将举行大选以来的首次国会听证会，以审查2020年总统大选中的“违规行为”，这将是本次
  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.html">
   大选舞弊
  </ok>
  的最大看点之一，也可能是扭转形势的重要环节之一。新唐人、大纪元将进行现场直播（中文同声翻译），敬请收看。
 </p>
 <p>
- 召集听证会的国土安全和政府事务委员会主席、威斯康星州的共和党参议员罗恩‧约翰逊（Ron Johnson）邀请六名证人出庭作证。
-</p>
-<p>
- 约翰逊表示，听证会旨在“恢复人们对系统的信心”，只是想“揭示”选举中发生的“可疑活动”，并没有下何定论或推翻选举结果，即使这样，也遭到民主党的强烈抨击和反对。
+ 召集听证会的国土安全和政府事务委员会主席、威斯康星州的共和党参议员罗恩‧约翰逊（Ron Johnson）邀请六名证人出庭作证。约翰逊表示，听证会旨在“恢复人们对系统的信心”，只是想“揭示”选举中发生的“可疑活动”，并没有下何定论或推翻选举结果，即使这样，听证会也遭到民主党的强烈抨击和反对。
 </p>
 <p>
  面对
