同步于: 12月16日22时52分

--- a/pages/p5/956021.md
+++ b/pages/p5/956021.md
@@ -1,4 +1,4 @@
-### 中国芯片产业烂尾丛生 三无企业风险太高(图)
+### 欧佩克再次下调石油需求预期 2021年迎考验
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,86 +6,79 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="芯片 产业 风险" src="https://img3.secretchina.com/pic/2020/9-13/p2775153a986898410-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   中国芯片行业低水平重复建设的风险日益显现出来。（图片来源：Adobe Stock）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看中国2020年12月16日讯】
+  <strong>
+   石油
+  </strong>
+  输出国组织
+  <strong>
+   欧佩克
+  </strong>
+  （OPEC）12月15日发布年内最后一份月度市场报告，再次下调了对2021年石油需求增长的预测，理由是目前肆虐全球的
+  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+   武汉肺炎
+  </span>
+  疫情带来的不确定性，可能对发达经济体明年上半年的燃料需求造成影响，但对未来
+  <strong>
+   经济
+  </strong>
+  复苏前景持乐观态度。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月21日讯】面对
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/芯片" target="_blank">
-    芯片
+   世界
+   <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
+    经济
    </span>
+   将出现反弹
   </strong>
-  断供的恐慌而引起的芯片
-  <strong>
-   产业
-  </strong>
-  乱象，中国官方表示，要对目前全国各地搞芯片的无序状况进行整顿，清除大量的庞大的烂尾项目。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  中国国家发展和改革委员会发言人人孟玮在星期二（10月20日）的例行新闻发布会上表示，一些没经验、没技术、没人才的“三无”企业投身芯片行业，盲目上项目，低水平重复建设的
-  <span href="https://www.secretchina.com/news/gb/tag/风险" target="_blank">
-   风险
+  <span href="https://www.secretchina.com/news/gb/tag/欧佩克" target="_blank">
+   欧佩克
   </span>
-  日益显现出来。
+  认为，疫情对全球经济影响深远。今年三季度各国经济活动大幅回升，反弹的主要支撑因素是强有力的财政和货币刺激，以及政府逐步放松限制措施。此外，各经济体居民储蓄为恢复消费以及提振全球贸易和投资奠定了坚实的基础。
  </p>
  <p>
-  据英国《金融时报》报道，今年前9个月已有1.3万多家
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  国际油价11月延续反弹，有关COVID-19疫苗的利好消息提振了外界对
+  <span href="https://www.secretchina.com/news/gb/tag/石油" target="_blank">
+   石油
   </span>
-  企业注册为半导体公司，为去年月均的2倍。而许多新晶片商在半导体方面毫无经验，有的是海鲜业者（比如大连晨鑫网络科技）、有的是汽车零件商（比如上海新朋汽车零部件有限公司）。
+  需求复苏的乐观情绪。原油期货合约间的升水结构逐步收窄，机构对油价前景的看法更加乐观，认为未来几个月全球石油需求基本面有望持续改善。
  </p>
  <p>
-  中国国务院2014年出台《国家集成电路
-  <span href="https://www.secretchina.com/news/gb/tag/产业" target="_blank">
-   产业
-  </span>
-  发展推进纲要》以来，包括上海、深圳、南京、武汉、合肥、成都、贵阳在内的多个城市都在重金布局芯片产业，以争取国家资源。
+  <strong>
+   欧佩克看好新兴经济体复苏前景
+  </strong>
  </p>
  <p>
-  中国是世界最大的芯片进口国。美中关系恶化导致中国市场对芯片供应中断的担忧，特别是美国对中国实施新制裁措施之后。
+  欧佩克预计今年全球经济将萎缩4.2%，较上月预测上修0.1个百分点。最近关于主要经济体疫苗接种计划快于预期的积极消息，为明年的增长预测提供了潜在的利好因素。预计2021年全球经济将增长4.4%，新兴经济体的增速将快于发达经济体，美国、欧元区和日本的GDP增速预期分别为3.4%、3.7%和2.8%。
  </p>
  <p>
-  中国半导体行业协会副理事长魏少军8月26日在世界半导体大会上说，中国是芯片进口大国。他说，中国在2013年以后其芯片进口额超过了2000亿美元。2018年，这一数字超过了3000亿美元，到2019年依然保持在这一水平。他认为，如果2020年没有任何异常情况发生，中国的芯片进口额可能不会低于3000亿美元。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国是全球芯片供应大国，其芯片出口份额占全球市场份额的大约52%。中国进口的大部分芯片都来自于美国。
+  <strong>
+   供需形势存不确定性
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -100,7 +93,7 @@
   </div>
  </center>
  <p>
-  根据总部位于上海的私募股权公司云岫资本 （WinSoul Capital）的估计，今年前七个月，中国半导体行业的总投资额为600亿元人民币(约合90亿美元)，是去年同期投资额的两倍多。
+  欧佩克最新预估，2020年世界石油需求将下降977万桶/日，至8999万桶/日，略低于上个月的评估。主要是由于疫情反弹令近期美国和欧洲的运输燃料需求下降，不过中印两国的需求恢复很大程度上填补了空缺。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -115,7 +108,7 @@
   </div>
  </center>
  <p>
-  投资的大量增加并没有带来产生相应的回报，而其中带来的投资泡沫风险日益加大，引起人们广泛的关注。
+  欧佩克称，经济复苏加上2020年的低基数效应将支撑明年的石油需求增长，看好运输和工业部门逐步恢复带动的市场回升。然而不确定性仍然很大，主要取决于疫情发展和疫苗效果，以及病毒阴影对消费者行为的结构性影响。欧佩克将2021年世界石油需求增长下调35万桶/日，至590万桶/日，其中第一季度的全球燃油消费预测下调100万桶/日。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +123,9 @@
   </div>
  </center>
  <p>
-  武汉弘芯半导体制造公司在武汉建立的新工厂今年因投资中断而陷入停顿，形成了一个巨大的烂尾项目。它本应是200亿美元投资计划的关键部分，希望有助于将武汉转变为半导体制造中心。
+  <strong>
+   欧佩克下调明年需求增速预期
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +140,37 @@
   </div>
  </center>
  <p>
-  今年早些时候，美国芯片大厂格芯（GlobalFoundries）和成都市政府投资1亿美元建立的制造厂在闲置近两年后停止运营。
+  供应方面，为了应对前所未有的市场变化，参与减产协议的欧佩克和非欧佩克成员国今年削减了约950万桶/日的过剩产能，此外美国和加拿大通过关闭钻井进一步减少了360万桶/日的产能。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  除了减产协议，欧佩克认为，2021年非欧佩克产油国供应量将温和回升85万桶/日，原因是北美的钻井活动逐渐增加，挪威和巴西的生产活动也将出现增长，不过行业整体恢复情况取决于疫情防控的最终效果及经济复苏的速度。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  原油库存仍然处于高位，10月经合组织OECD商业石油库存总量为31.45亿桶，同比增加2.252亿桶，比最近五年平均水平高出2.030亿桶。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,7 +189,7 @@
   </ins>
  </center>
  <p>
-  德科码（南京）半导体科技有限公司位于南京约30亿美元的半导体项目在停滞约两年后，于今年7月宣布破产。
+  重申减产承诺
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,7 +204,7 @@
   </div>
  </center>
  <p>
-  香港《南华早报》引用上海半导体研究公司芯谋研究（ICWISE）的首席分析师顾文军的观点。他认为，政府需要鼓励更多的私人投资，而不是仅仅依赖国家。
+  欧佩克表示，OPEC+成员国今年迅速果断地采取行动，在《合作宣言》框架内调整石油产量，有效避免了石油市场严重失衡。在本月3日举行的欧佩克和非欧佩克部长级会议上，各方再次确认了减产承诺，对实现长期石油市场稳定至关重要。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +219,7 @@
   </div>
  </center>
  <p>
-  分析人士指出，中国一向把集中力量办大事作为它引以为傲的一项制度优势。但这种举国体制像任何事物一样都有利有弊。它可以被动员起来做好事，也往往成为巨大灾难的温床。上个世纪60年代初，中共发动了全国性的运动，结果就造成了一场全国性的大饥荒，导致4000多万人饿死。
+  欧佩克重申，从2021年1月开始，减产协议参与国决定自愿将减产配额从770万桶/日调整至720万桶/日。此外，各方同意自1月起每月举行一次产油国部长级会议，以评估市场状况，确认未来一个月的生产计划。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,7 +234,7 @@
   </div>
  </center>
  <p>
-  许多专业人士表示，芯片制造是一个极为复杂和要求极高的工艺，砸钱是砸不出来的。目前中国芯片业的乱像不过是全国各地政府都想通过设立项目而捞取国家投资的一种正常现象。出现巨大的浪费也是这个举国制度的内在特征之一。
+  欧佩克决定将本周OPEC+联合技术委员会和部长级监测委员会的会议推迟到1月3日和4日举行。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -223,6 +248,34 @@
    </center>
   </div>
  </center>
+ <div id="gtx-trans" style="position: absolute; left: 1025px; top: 12.8px;">
+  <div class="gtx-trans-icon">
+  </div>
+ </div>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  责任编辑:辛荷
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40hh"/>
+  转载请注明出处，
+  <span style="color:red">
+   严禁建立镜像网站
+  </span>
+  .
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -244,42 +297,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949870.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949870.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949870.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/21/949870.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956021.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956021.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956021.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/16/956021.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949870.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/956021.md' width='0px' height='0px'/>
