--- a/pages/nf4514/n12624493.md
+++ b/pages/nf4514/n12624493.md
@@ -1,4 +1,4 @@
-### 【大选更新12·16】埃利斯：主流媒体在撒谎
+### 【大选更新12·16】参院听证：内华达13万欺诈案例
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -64,6 +64,55 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 听证会上议员援引最新民调：应调查舞弊
+</h3>
+<p>
+ 最新民调显示，有46%的美国人相信
+ <ok href="https://www.epochtimes.com/gb/tag/2020%E5%A4%A7%E9%80%89.html">
+  2020大选
+ </ok>
+ 有舞弊存在。一位参议员在今天（12月16日）的参议院公听会上表示，和2016年相比，更多比例的美国人相信今年的选举有问题，既然国会曾经花费数千万美元来调查2016年的选举，那么没有理由不调查一个更多美国人相信的舞弊选举问题。
+</p>
+<p>
+ 根据麦克拉夫林（McLaughlin &amp; Associates）12月15日发布的最新民调，46%的美国人认为大选投票发生了欺诈；52%的人赞成川普（特朗普）总统继续打官司。而在这些人中有一半的人是投拜登的选民。也就是说，这些数据可以代表共和党和民主党双方选民的意见。
+</p>
+<p>
+ 在今日川普总统援引的另一项调查中，高达92%的共和党选民认为选举有诈。
+</p>
+<p>
+ “2016年12月的一个民调问美国人是否相信俄罗斯干预并改变了我们的选举，当时有32%的人相信俄罗斯影响了选举的结果。”共和党参议员兰克福德（James Lankford）在听证会上说，后来的所有听证会和那些费时费力的调查全都来自于这三分之一的美国人的怀疑。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/16/n12625960.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 美参院听证 川普律师揭内华达13万欺诈案例
+</h3>
+<p>
+ 美国参议院国土安全和政府事务委员会12月16日举行了选举日以来的首次国会听证会。川普（特朗普）团队律师杰西‧宾纳尔（Jesse Binnall）在听证会上表示，内华达州的选举过程充斥着选民欺诈行为，目前专家认定13万多实例，实际数量更多。
+</p>
+<p>
+ “此次大选中，内华达州成千上万合法选民由于选举欺诈和无效选票，投票权遭到损害。”宾纳尔说。
+</p>
+<p>
+ 宾纳尔此前曾对内华达州提起诉讼，挑战选举结果，但12月4日被法官驳回。
+</p>
+<p>
+ 他在16日的听证会上详细叙述了内华达州选举欺诈情况。
+</p>
+<p>
+ 宾纳尔随后列举了针对内华达州的6项指控：超过4.2万人重复投票；至少1500名死人被注册投票；超过1.9万非本州人投票；大约8000人使用不存在的地址投票；超过1.5万人使用商业地址或超过90天无人居住的地址投票；大约4000名外国人投票。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/16/n12625887.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
 <h3>
  川普团队律师：不论1月6日结果如何 战斗将继续
 </h3>
