同步于: 12月17日15时52分

--- a/pages/p8/956086.md
+++ b/pages/p8/956086.md
@@ -1,4 +1,4 @@
-### 男人的底线 就7句话(图)
+### 挡风玻璃天冷易起雾 4大除雾技巧学起来(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,25 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="男人 志气 恩情 善良" src="https://img3.secretchina.com/pic/2020/8-12/p2752052a411885276-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="汽车 挡风玻璃 起雾 除雾" src="https://img3.secretchina.com/pic/2020/9-3/p2768732a58056294-ss.jpg"/>
   <br>
-   男人的底线，就7句话。（图片来源：Adobe stock)
+   <strong>
+    汽车
+   </strong>
+   的
+   <strong>
+    挡风玻璃
+   </strong>
+   天冷易
+   <strong>
+    起雾
+   </strong>
+   ，4大
+   <strong>
+    除雾
+   </strong>
+   技巧学起来。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,58 +36,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《通往天安门的旅程》- 36名西方人天安门和平请愿](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  明居正：抗戰誰打的? 八年抗戰真相是什麼? 還原真相 正本清源說歷史](http://141.164.51.119:10000/videos/news/mjz01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <strong>
-   【01】再累，不欠钱不还！
-  </strong>
+  时间过得很快，不知不觉又到了冬季，气温也急剧下降，让人们感到一丝凉意。而对冬季开车的朋友而言，最让人头疼的其中一件事，就是
+  <span href="https://www.secretchina.com/news/gb/tag/汽车" target="_blank">
+   汽车
+  </span>
+  前挡风玻璃起雾了。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  人品是自己建的，信任是他人给的。
+  相信有开车的朋友都知道，冬季用车安全隐患大，除了要小心路面湿滑的危险，也要克服
+  <span href="https://www.secretchina.com/news/gb/tag/挡风玻璃" target="_blank">
+   挡风玻璃
+  </span>
+  起雾影响视线。那么在冬天开车时，若挡风玻璃起雾怎么办，该用什么方法快速除雾呢？
  </p>
  <p>
-  帮你的人，是在乎你的人！真心别伤，伤了无法复原。
+  在弄懂车辆挡风玻璃快速除雾方法前，我们要先清楚一个概念，就是冬天汽车挡风玻璃为何会
+  <span href="https://www.secretchina.com/news/gb/tag/起雾" target="_blank">
+   起雾
+  </span>
+  ？
  </p>
  <p>
   <strong>
-   【02】再穷，不坑蒙拐骗！
+   ●挡风玻璃起雾原因
   </strong>
  </p>
  <p>
-  人穷不可怕，只要有
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/志气" target="_blank">
-    志气
-   </span>
-  </strong>
-  ，朋友不能坑，
-  <strong>
-   恩情
-  </strong>
-  不能忘。
+  一般来说，冬季汽车挡风玻璃易起雾，和车辆内外的温差有关。例如车辆在外面停放一晚后，由于车外气温较低，当人员进入车辆内部产生热气后，受内外温差的影响，挡风玻璃自然就会产生雾气。
  </p>
  <p>
-  忘恩负义，必惹人非议，坏事做尽，必背负骂名！
+  当内外温差持续加重后，挡风玻璃的雾气就会越积越多，形成一层小水珠附在挡风玻璃内壁上。而挡风玻璃上的雾气，不但给行车视线带来困扰，也会给行车安全带来隐患。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  接下来就分享4个
+  <span href="https://www.secretchina.com/news/gb/tag/除雾" target="_blank">
+   除雾
+  </span>
+  小技巧，不但安全还管用，学会的话受益无穷。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -88,54 +112,7 @@
  </center>
  <p>
   <strong>
-   【03】再难，不偷奸耍滑！
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  端自己的碗，吃自己的饭，别总想着把便宜占。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  糊弄别人，最终糊弄的都是自己！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   【04】再苦，不把人暗算！
+   ●4个除雾小妙招
   </strong>
  </p>
  <center>
@@ -151,38 +128,11 @@
   </div>
  </center>
  <p>
-  精明能干是好事，不择手段惹祸端。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  你能占尽便宜，也会失掉利益，你能把人算计，也会遭到唾弃！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   【05】再喜欢，不拆人家庭！
+   1
+  </strong>
+  <strong>
+   、打开车窗除雾
   </strong>
  </p>
  <center>
@@ -198,7 +148,7 @@
   </div>
  </center>
  <p>
-  人活着，不能没有品，处感情，不能没有德。
+  由于冬天挡风玻璃起雾是温差造成的，因而在驾车时，可以稍微打开车窗，让空气对流，使车辆内外温差不要太大即可。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +163,25 @@
   </div>
  </center>
  <p>
-  人品败坏，最后伤人伤己，千方百计，必会惹来后患！
+  只是这方法看似有效易操作，但实用性并不高，尤其是寒冷的冬天，若再遇上雨天或是大风雪，那么打开车窗开车的话，寒冷程度也可想而知。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="寒冷的冬天，若再遇上雨天或是大风雪，那么开窗的寒冷程度也可想而知。" src="https://img3.secretchina.com/pic/2020/2-26/p2635393a184817834-ss.jpg"/>
+  <br>
+   寒冷的冬天，若再遇上雨天或是大风雪，那么开窗的寒冷程度也可想而知。（图片来源：Adobestock）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +197,60 @@
  </center>
  <p>
   <strong>
-   【06】再重情，不卑躬屈膝！
+   2
+  </strong>
+  <strong>
+   、打开暖风除雾
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在冬季开车，车辆内部温度相对来说较低，若挡风玻璃开始起雾，可以打开车辆的暖风除雾。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  暖风除雾的效果也明显，能快速将挡风玻璃的雾气吹走，但是缺点也显而易见。例如暖风虽然可以暂时性吹走雾气，但新的雾气很快又会来到，还会把挡风玻璃变得灰蒙蒙的，对行车安全影响极大。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   3
+  </strong>
+  <strong>
+   、使用一键除雾功能
   </strong>
  </p>
  <center>
@@ -249,7 +270,7 @@
   </ins>
  </center>
  <p>
-  有志气的人，有人尊重，没志气的人，让人可怜。
+  对目前大多数车子来说，一键除雾功能是基本配备。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -264,7 +285,22 @@
   </div>
  </center>
  <p>
-  活着就得有骨气，没骨气，只会让人瞧不起！
+  例如在一些高档车型上，在车辆中控的位置分别有个“FRONT”和“REAR”键，可快速清除挡风玻璃上的雾气。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在冬季开车时，若发现前挡风玻璃有雾气，只需按一下“FRONT”键，就能启动前挡风玻璃的快速除雾功能；而按一下“REAR”键，则可以启动后挡风玻璃的除雾功能。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -280,29 +316,11 @@
  </center>
  <p>
   <strong>
-   【07】再有钱，别目中无人！
+   4
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人富不是重点，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/善良" target="_blank">
-    善良
-   </span>
+   、使用除雾剂
   </strong>
-  才是关键！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,7 +335,7 @@
   </div>
  </center>
  <p>
-  人和人都一样，没谁能一手遮天，
+  除了上面3个除雾妙招外，另一个除雾小妙招就是使用专用的“除雾剂”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -332,7 +350,7 @@
   </div>
  </center>
  <p>
-  更没有资格瞧不起别人。
+  当车辆挡风玻璃或后视镜有雾气时，可先将玻璃表面擦拭干净，然后把除雾剂喷洒在玻璃上，最后以干毛巾擦干即可。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -346,27 +364,23 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+ <p>
+  现代的汽车玻璃除雾剂，其实就是一种浓缩后的纳米产品，它们可以在汽车玻璃形成一层透明保护膜，防止水蒸汽冷凝在玻璃上，形成雾气。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  当然市面的汽车防雾产品种类繁多，价格通常也不贵，但除雾效果却存在差异。所以在选购汽车玻璃除雾剂时，一定要选择评价好的产品，这样质量也才会有保障。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -379,6 +393,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:王承
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40ik"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -396,13 +444,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/942644.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/942644.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/942644.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/23/942644.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956086.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956086.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956086.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/17/956086.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/942644.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/956086.md' width='0px' height='0px'/>
