--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -111612,4 +111612,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=12172002)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=12172052)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
