--- a/pages/nf4514/n12627085.md
+++ b/pages/nf4514/n12627085.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月17日讯】（大纪元记者陈霆综合报导）美国最高立法机构周三（12月16日）首次就选举问题召开听证会，打破两党对大选违规行为的沉默。邀请6位证人出席，分别介绍了
+ 【大纪元2020年12月17日讯】（大纪元记者陈霆、徐简综合报导）美国最高立法机构周三（12月16日）首次就选举问题召开听证会，打破两党对大选违规行为的沉默。邀请6位证人出席，分别介绍了
  <ok href="https://www.epochtimes.com/gb/tag/%E9%80%89%E4%B8%BE%E8%88%9E%E5%BC%8A.html">
   选举舞弊
  </ok>
@@ -44,6 +44,18 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
+<h3>
+ 格雷厄姆呼吁设立特别检察官 调查亨特
+</h3>
+<p>
+ 共和党高级参议员林赛·格雷厄姆（Lindsey Graham）周三（12月17日）表示，他支持任命一名特别检察官，以调查民主党总统候选人拜登之子亨特的呼吁。
+</p>
+<p>
+ “我绝对呼吁（任命）特别检察官，调查亨特·拜登（Hunter Biden）所有的事情，看看他在（被俄罗斯特工占领的）乌克兰的商业交易以及他与中国政府的任何活动是否与拜登政府存在冲突。”参议院司法机构主席林赛·格雷厄姆（Lindsey Graham）在国会山告诉记者。
+</p>
+<p>
+ 除格雷厄姆外，众议院外交委员会成员肯·巴克（Ken Buck）本月早些时候也致信司法部长威廉·巴尔（William Barr），敦促他对亨特展开调查。
+</p>
 <h3>
  应对人权和腐败
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
